# abin

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md
.github/: PULL_REQUEST_TEMPLATE.md
abin/: Cargo.toml
abin/src/: README.md
abin/src/binary/: bin_builder.rs  factory.rs  mod.rs
abin/src/boo/: boo_enum.rs  eq_ord.rs  to_owned.rs  types.rs
abin/src/common/: mod.rs  sync.rs  un_sync.rs
abin/src/implementation/: factory_common.rs  factory_new.rs
abin/src/implementation/default_builder/: default_bin_builder.rs  mod.rs
abin/src/implementation/internal/: any_rc.rs  arc.rs  stack_bin_builder.rs  static_bin.rs  vec.rs
abin/src/implementation/reference_counted/: data.rs  rc.rs
abin/src/serde_support/: binary.rs  default_scopes.rs  ri_deserialization_bin.rs  string.rs
abin/src/spi/: data.rs  mod.rs
abin/src/string/: mod.rs  sbin_str.rs  segment_iterator_converter.rs
abin/tests/: same_behaviour.rs  single_allocation_from_segments.rs  usage_1_basics.rs  usage_3_builder.rs  usage_5_boo.rs  usage_7_serde_ri.rs  usage_9_re_integration.rs
abin/tests/utils/: bin_gen.rs  memory.rs
abin_core/: Cargo.toml
abin_interface/: Cargo.toml
benchmark/: .gitignore  Cargo.toml  README.md
benchmark/benches/: benchmark_cmp.rs
benchmark/src/: HUGE_STR1.txt  HUGE_STR2.txt  LARGE_STR1.txt  LARGE_STR2.txt  benchmark.rs  lib.rs  test_set.rs
benchmark/src/bench_str/: abin_str.rs  arc_optimized.rs  arc_str_only.rs  bytes_str.rs  mod.rs  s_str.rs  string_only.rs
benchmark/tests/: memory_benchmark.rs
src/: README.md  lib.rs
tests/: as_keys_in_hash_map.rs  basic_rc._rs  basic_rc.rs  basic_rc_memory.rs  basic_stack.rs  basic_stack_memory.rs  basic_static.rs  basic_usage.rs  basic_usage2.rs  basic_vec._rs  basic_vec.rs  bin_gen.rs  bin_slice_hash_map.rs  building_using_rayon.rs  no_alloc_guarantees.rs  no_leak_tests.rs  old_basic_rc_memory.rs  old_basic_static.rs  (+37 more)
(+129 files in other folders)
