[package]
name = "abin"
version = "0.1.0"
authors = ["caelis <simon.ruoss@gmail.com>"]
edition = "2018"

[dependencies]
smallvec = ">= 1.4"
serde = { version = ">= 1.0.96", optional = true, default-features = false }

[dev-dependencies]
stats_alloc = ">= 0.1"
serde_cbor = ">= 0.11"
serde = { version = ">= 1.0.96", features = ["derive"] }